# llm-logparser

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: validate-manifest.yml
docs/: config-guide.md  contributing.md  error-codes.md  mvp.md  output-contract.md  provider-guide.md  requirements.md  requirements_jp.md  roadmap.md  security.md  test-strategy.md
docs/examples/: manifest-sample.json  mapping.sample.yaml  sample-messages.jsonl  sample-openai-message.json  sample-openai-threads.json  sample-output.md
src/llm_logparser/: cli.py  exporter.py  parser.py  utils.py
src/llm_logparser/cli/: __main__.py  cli.py
src/llm_logparser/core/: exporter.py  i18n.py  parser.py  schema_validation.py  utils.py
src/llm_logparser/core/providers/: __init__.py
src/llm_logparser/core/schemas/: message.schema.json
src/llm_logparser/providers/: __init__.py  chatgpt.yaml  openai_chatgpt.py
src/llm_logparser/providers/openai/: adapter.py  (+2 more)
src/llm_logparser/schemas/: manifest.schema.json
src/llm_logparser/utils/: __init__.py  policy.py  text_normalizer.py
tests/: test_e2e_openai_parse_export.py  test_exporter_jsonl.py  test_exporter_markdown.py  test_openai_adapter.py  test_parser_json_records.py  test_parser_validation.py  test_schema_validation.py
tests/fixtures/: manifest.json  openai_sample.json  openai_sample_multi.json
vscode-extension/: package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/src/backend/: python.ts
vscode-extension/src/ui/: panel.ts
(+9 files in other folders)
